fix z-index issues

--- a/css/global_style.css
+++ b/css/global_style.css
@@ -78,7 +78,7 @@ h3{
     position: fixed;
     width: 100%;
     /*min-width: 1024px;*/
-    z-index: 999;
+    z-index: 99;
     /*padding-top: 30px;
     padding-left: 32px;
     background-color: red;*/
@@ -153,7 +153,7 @@ h3{
     transition-property: all;
     transition-duration: .3s;
     position: fixed;
-    z-index: 999;
+    z-index: 98;
     min-width: 1024px;
     width: 100%;
     height: 100%;
@@ -411,7 +411,7 @@ h3{
 #content_nav_bg{
     transition-property: opacity;
     transition-duration: .3s;
-    z-index: 800;
+    z-index: 97;
     position: fixed;
     width: 100%;
     height: 75px;
