--- a/css/w_trims_style.css
+++ b/css/w_trims_style.css
@@ -14,7 +14,7 @@
     top: 144px;
     left: 0;
     transform: translate(-400px,0);
-    z-index: 100;
+    z-index: 0;
 }
 #trims_header_r{
     background: url("../img/trims_h_r.jpg") no-repeat;
@@ -26,7 +26,7 @@
     top: 144px;
     right: 0;
     /*transform: translate(360px,0);*/
-    z-index: 100;
+    z-index: 0;
 }
 h1{
     font-family: "HK Grotesk Bold", serif;
@@ -37,7 +37,7 @@ h1{
     max-width: 780px;
     top: 160px;
     left: 320px;
-    z-index: 400;
+    z-index: 1;
 }
 #trims_note{
     width: 376px;
@@ -46,7 +46,7 @@ h1{
     left: 320px;
     background-color: #FFE851;
     padding: 80px 60px;
-    z-index: 420;
+    z-index: 2;
 }
 .trims_img{
     width: 100%;
